test/errorhandling/missing_close.mss
#world[natural="water"
{
  polygon-fill: blue;
}
